[tool.poetry]
name = "lemarche"
description = "Marché de l'inclusion"
version = "1.0"
authors = []

[tool.poetry.dependencies]
boto = "^2.49.0"
boto3 = "<1.36.0"
crawlerdetect = "^0.1.7"
django = "5.1.11"
django-admin-list-filters = "^1.2"
django-anymail = "^12.0"
django-better-admin-arrayfield = "^1.4.2"
django-bootstrap4 = "^23.4"
django-ckeditor = "^6.7.1"
django-compressor = "^4.4"
django-cors-headers = "^3.14.0"
django-environ = "^0.9.0"
django-extensions = "^3.2.3"
django-filter = "^23.3"
django-formtools = "^2.5.1"
django-htmx = "^1.17.3"
django-libsass = "^0.9"
django-select2 = "^8.4.1"
django-sesame = "^3.2.2"
django-storages = "^1.14.3"
djangorestframework = "^3.15.1"
drf-spectacular = "^0.26.5"
huey = "^2.5.0"
ipython = "^8.24.0"
psycopg2-binary = "^2.9.9"
PyMySQL = "^1.1.0"
python = "^3.10.4"
python-stdnum = "^1.20"
redis = "^5.2.1"
requests = "^2.32.4"
sentry-sdk = "^2.19.2"
shortuuid = "^1.0.13"
sib-api-v3-sdk = "^7.6.0"
wagtail = "^6.1"
wagtailmenus = "^4.0"
wagtail-modeladmin = "^2.0.0"
whitenoise = "^6.6.0"
xlwt = "^1.3.0"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^7.3.0"}
django-simple-history = "^3.7.0"
django-dsfr = "1.4.3"
pillow-heif = "^0.16.0"
wagtail-markdown = "^0.12.1"
wagtail-localize = "^1.9"
unidecode = "^1.3.8"
wagtail-transfer = "^0.9.4"
django-datadog-logger = "^0.7.3"
django-allauth = "^65.7.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
coverage = "^7.6.10"
django-debug-toolbar = "^5.0.1"
factory-boy = "^3.3.3"
flake8 = "^7.0.0"
freezegun = "^1.5.1"
ipdb = "^0.13.13"
isort = "^6.0.0"
poethepoet = "^0.32.2"
pre-commit = "^4.1.0"
pyproject-flake8 = "^7.0.0"
pytest-django = "^4.9.0"
selenium = "^4.28.1"
tblib = "^3.0.0"

[tool.poetry.scripts]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.flake8]
# E203: Whitespace before ':', used to please Black in `yield items[i : i + n]`
# E266: Too many leading '#' for block comment
# W503: Line break occurred before a binary operator
max-line-length = 119
ignore = "E203, E266, W503"
max-complexity = 10
exclude = [
    ".git",
    "__pycache__",
    "migrations"
]

[tool.isort]
combine_as_imports = true
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "lemarche"
lines_after_imports = 2
line_length = 119
multi_line_output = 3
use_parentheses = true

[tool.black]
line-length = 119
target-version = ['py310']
include = '\.pyi?$'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "lemarche.settings.test"

[tool.poe.tasks]
export = { shell = "poetry export --without-hashes --output requirements/staging.txt" }
export_dev = { shell = "poetry export --without-hashes --with dev --output requirements/dev.txt" }
flake8 = { shell = "pflake8 lemarche" }
isort = { shell = "isort ./lemarche/*.py" }
black = { shell = "black lemarche" }
clean_code = ["isort", "black"]
clean = { shell = "rm -r __pycache__/" }
