[project]
name = "lemarche"
version = "1.0"
description = "Marché de l'inclusion"
authors = []
requires-python = ">=3.13,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "boto3<1.36.0",
    "brevo-python>=1.0",
    "crawlerdetect>=0.1,<0.2",
    "django>=5.2,<6",
    "django-admin-list-filters>=1.2,<2",
    "django-allauth>=65.0,<66",
    "django-anymail>=12.0,<13",
    "django-better-admin-arrayfield>=1.4,<2",
    "django-ckeditor>=6.0,<7",
    "django-compressor>=4.4,<5",
    "django-cors-headers>=3.0,<4",
    "django-datadog-logger>=0.7,<0.8",
    "django-dsfr==1.4.3",
    "django-environ>=0.9,<0.10",
    "django-extensions>=3.0,<4",
    "django-filter>=23.0,<24",
    "django-formtools>=2.0,<3",
    "django-htmx>=1.0,<2",
    "django-libsass>=0.9,<0.10",
    "django-phonenumber-field[phonenumbers]>=7.3.0,<8",
    "djangorestframework>=3.0,<4",
    "django-sesame>=3.0,<4",
    "django-simple-history>=3.7.0,<4",
    "django-storages>=1.0,<2",
    "drf-spectacular>=0.26,<0.27",
    "huey>=2.0,<3",
    "psycopg[binary]>3",
    "python-stdnum>=1.20,<2",
    "redis>=5.0,<6",
    "requests>=2.0,<3",
    "sentry-sdk>=2.0,<3",
    "shortuuid>=1.0,<2",
    "xlwt>=1.0,<2",
    "wagtail>=6.1,<7",
    "wagtail-localize>=1.9,<2",
    "wagtail-markdown>=0.12.1,<0.13",
    "wagtail-modeladmin>=2.0.0,<3",
    "wagtailmenus>=4.0,<5",
    "unidecode>=1.3.8,<2",
]

[dependency-groups]
dev = [
    "black>=25.0,<26",
    "coverage>=7.0,<8",
    "django-debug-toolbar>=5.0,<6",
    "factory-boy>=3.0,<4",
    "flake8>=7.0,<8",
    "freezegun>=1.5,<2",
    "ipdb>=0.13,<0.14",
    "isort>=6.0,<7",
    "pre-commit>=4.0,<5",
    "pyproject-flake8>=7.0,<8",
    "selenium>=4.0,<5",
    "tblib>=3.0,<4",
]


[tool.flake8]
# E203: Whitespace before ':', used to please Black in `yield items[i : i + n]`
# E266: Too many leading '#' for block comment
# W503: Line break occurred before a binary operator
max-line-length = 119
ignore = "E203, E266, W503"
max-complexity = 10
exclude = [
    ".git",
    "__pycache__",
    "migrations"
]

[tool.isort]
combine_as_imports = true
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "lemarche"
lines_after_imports = 2
line_length = 119
multi_line_output = 3
use_parentheses = true

[tool.black]
line-length = 119
target-version = ['py313']
include = '\.pyi?$'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "lemarche.settings.test"
